<resources>
    <string name="app_name">AlmaTrack</string>

    //Login
    <string name="company_name">ALMATRACK</string>
    <string name="etEmail">Ingrese Correo Electronico</string>
    <string name="etPassword">Ingrese Contraseña</string>
    <string name="btGetInto">INICIAR SESIÓN</string>
    <string name="tvForgetPassword">¿Olvidaste tu contraseña?</string>
    <string name="IVcontentDescription">Logo de ALMATRACK</string>


    //Recover Password
    <string name="tv_title_recover_password">¡Has Olvidado tu Contraseña!</string>
    <string name="tv_information_recover_password">Te enviaremos un correo electrónico con un código para restablecer tu contraseña.</string>
    <string name="tv_information_recover_password2">Introduce a continuación el correo alectrónico asociado a tu cuenta.</string>
    <string name="bt_send_code_email">ENVIAR CODIGO</string>

    //Main
    <string name="tv_product_inventory">INVENTARIOS</string>

    //dialog add inventory
    <string name="tv_title_new_inventory">NUEVO INVENTARIO</string>
    <string name="et_new_inventory">*Nombre del inventario</string>
    <string name="tv_select_currency">Selecciona Moneda:</string>
    <string name="bt_create_inventory">CREAR</string>
    <string-array name="currencies">
        <item>MXN</item>
        <item>USD</item>
    </string-array>

    //dialog add product
    <string name="tv_title_new_product">Nuevo Producto</string>
    <string name="et_new_product">*Nombre del producto</string>
    <string name="et_product_description">Descripción del producto</string>
    <string name="et_product_price">*Precio costo del producto</string>
    <string name="et_product_sale_price">*Precio venta del producto</string>
    <string name="et_product_stock">*Cantidad de stock inicial</string>


    //activity_report
    <string name="tv_title_invested_value">RENTABILIDAD DE PRODUCTOS</string>
    <string name="tv_existence_product">Existencia de Productos Actuales</string>
</resources>